--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "start:webApp": "pnpm --filter @www/http-server start && echo 0"
   },
   "engines": {
-    "node": "=16.15.1",
-    "pnpm": "=7.5.1"
+    "node": ">=16.0.1",
+    "pnpm": ">=7.5.1"
   }
 }
