--- a/apps/node-server/package.json
+++ b/apps/node-server/package.json
@@ -10,18 +10,22 @@
     "@midwayjs/info": "3.3.11",
     "@midwayjs/koa": "3.0.13",
     "@midwayjs/logger": "2.14.0",
-    "@midwayjs/validate": "3.3.11"
+    "@midwayjs/validate": "3.3.11",
+    "@nan/db-entities": "workspace:^1.0.0"
   },
   "devDependencies": {
     "@midwayjs/cli": "1.2.90",
     "@midwayjs/mock": "3.3.5",
+    "@midwayjs/orm": "3",
     "@types/jest": "26.0.24",
     "@types/koa": "2.13.4",
     "@types/node": "16.11.41",
     "cross-env": "7.0.3",
     "jest": "26.6.3",
     "mwts": "1.3.0",
+    "mysql2": "^2.3.3",
     "ts-jest": "26.5.6",
+    "typeorm": "^0.3.7",
     "typescript": "4.7.4"
   },
   "engines": {
