--- a/apps/node-server/package.json
+++ b/apps/node-server/package.json
@@ -4,29 +4,35 @@
   "description": "",
   "private": true,
   "dependencies": {
-    "@midwayjs/bootstrap": "3.3.9",
-    "@midwayjs/core": "3.3.5",
-    "@midwayjs/decorator": "3.3.4",
-    "@midwayjs/info": "3.3.11",
-    "@midwayjs/koa": "3.0.13",
-    "@midwayjs/logger": "2.14.0",
-    "@midwayjs/validate": "3.3.11",
-    "@nan/db-entities": "workspace:^1.0.0"
+    "@midwayjs/bootstrap": "^3.0.0",
+    "@midwayjs/core": "^3.0.0",
+    "@midwayjs/decorator": "^3.0.0",
+    "@midwayjs/info": "^3.0.0",
+    "@midwayjs/jwt": "^3.4.4",
+    "@midwayjs/koa": "^3.0.0",
+    "@midwayjs/logger": "^2.14.0",
+    "@midwayjs/orm": "^3.4.3",
+    "@midwayjs/swagger": "^3.4.5",
+    "@midwayjs/typeorm": "^3.4.4",
+    "@midwayjs/validate": "^3.3.11",
+    "@nan/common": "workspace:^1.0.0",
+    "@nan/db-entities": "workspace:^1.0.0",
+    "mysql2": "^2.3.3",
+    "typeorm": "^0.3.7"
   },
   "devDependencies": {
-    "@midwayjs/cli": "1.2.90",
-    "@midwayjs/mock": "3.3.5",
-    "@midwayjs/orm": "3",
-    "@types/jest": "26.0.24",
-    "@types/koa": "2.13.4",
-    "@types/node": "16.11.41",
-    "cross-env": "7.0.3",
-    "jest": "26.6.3",
-    "mwts": "1.3.0",
-    "mysql2": "^2.3.3",
-    "ts-jest": "26.5.6",
-    "typeorm": "^0.3.7",
-    "typescript": "4.7.4"
+    "@midwayjs/cli": "^1.2.90",
+    "@midwayjs/mock": "^3.0.0",
+    "@types/jest": "^26.0.10",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/koa": "^2.13.4",
+    "@types/node": "14",
+    "cross-env": "^6.0.0",
+    "jest": "^26.4.0",
+    "mwts": "^1.0.5",
+    "swagger-ui-dist": "^4.13.0",
+    "ts-jest": "^26.2.0",
+    "typescript": "~4.6.0"
   },
   "engines": {
     "node": ">=12.0.0"
