--- a/apps/web-app/package.json
+++ b/apps/web-app/package.json
@@ -9,13 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@nan/icon": "workspace:^1.0.0",
+    "element-ui": "^2.15.9",
     "pinia": "^2.0.17",
     "vue": "^3.2.37",
     "vue-router": "4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.0",
-    "scss": "^0.2.4",
+    "sass": "^1.54.0",
     "typescript": "^4.6.4",
     "vite": "^3.0.0",
     "vue-tsc": "^0.38.4"
