--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,21 +22,21 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      -uses: actions/setup-node@v3.5.0
-      -name: intall Node.js
+      - uses: actions/checkout@v2
+      - name: intall Node.js
         uses: actions/setup-node@v3.5.0
         with:
           node-version: "16.X"
-      -uses: pnpm/action-setup@v2.2.2
-      -name: intall pnpm
+      - uses: pnpm/action-setup@v2.2.2
+      - name: intall pnpm
         uses: pnpm/action-setup@v2.2.2
         with: 
           version: ">=7.5.1"
-      -name: install dep
+      - name: install dep
         run: pnpm install
-      -name: build webApp
+      - name: build webApp
         run: pnpm build:webApp
-      -name: deploy
+      - name: deploy
         uses: appleboy/scp-action@v0.0.1
         with: 
           host: ${{ secrets.NAN_HOST }}
