--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,13 +38,12 @@ jobs:
       - name: appleboy/scp-action
         uses: appleboy/scp-action@v0.1.3
         with: 
-          host: "16.163.109.255"
+          host: "ubuntu@ec2-16-163-109-255.ap-east-1.compute.amazonaws.com"
           port: 22
           username: "ubuntu"
           key: ${{ secrets.NAN_PEM }}
           source: "apps/@www/webApp"
           target: "/home/ubuntu/code/myWebServer/apps/@www/webApp"
-          script: whoami
 
           
    
