--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,8 +42,8 @@ jobs:
           port: 22
           username: "ubuntu"
           key: ${{ secrets.NAN_PEM }}
-          source: "apps/@www/webApp"
-          target: "/home/ubuntu/code/myWebServer/apps/@www/webApp"
+          source: "/"
+          target: "/home/ubuntu/code/@www/webApp"
 
           
    
