--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,12 +38,12 @@ jobs:
       - name: appleboy/scp-action
         uses: appleboy/scp-action@v0.1.3
         with: 
-          host: "16.163.109.255"
+          host: ${{ secrets.NAN_HOST }}
           port: 22
-          username: "ubuntu"
-          key: ${{ secrets.NAN_PEM }}
+          username: ${{ secrets.NAN_USERNAME }}
+          key: ${{ secrets.NAN_KEY }}
           source: "apps/@www/webApp"
-          target: "/home/ubuntu/code/myWebServer/"
+          target: ${{ secrets.NAN_TARGET }}
           rm: true
           strip_components: 2
 
