--- a/apps/node-server/package.json
+++ b/apps/node-server/package.json
@@ -12,12 +12,14 @@
     "@midwayjs/koa": "^3.0.0",
     "@midwayjs/logger": "^2.14.0",
     "@midwayjs/orm": "^3.4.3",
+    "@midwayjs/redis": "3",
     "@midwayjs/swagger": "^3.4.5",
     "@midwayjs/typeorm": "^3.4.4",
     "@midwayjs/upload": "3",
     "@midwayjs/validate": "^3.3.11",
     "@nan/common": "workspace:^1.0.0",
     "@nan/db-entities": "workspace:^1.0.0",
+    "ali-oss": "^6.17.1",
     "i": "^0.3.7",
     "mysql2": "^2.3.3",
     "npm": "^8.19.2",
