--- a/apps/web-app/tsconfig.json
+++ b/apps/web-app/tsconfig.json
@@ -1,22 +1,41 @@
 {
+  "compileOnSave": true,
   "compilerOptions": {
-    "target": "ESNext",
-    "useDefineForClassFields": true,
-    "module": "ESNext",
-    "moduleResolution": "Node",
-    "strict": true,
-    "jsx": "preserve",
-    "sourceMap": true,
-    "resolveJsonModule": true,
-    "isolatedModules": true,
+    "target": "es2018",
+    "module": "commonjs",
+    "moduleResolution": "node",
     "esModuleInterop": true,
-    "lib": ["ESNext", "DOM"],
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
+    "allowJs": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "isolatedModules": false,
+    "inlineSourceMap": true,
+    "noImplicitThis": true,
+    "noUnusedLocals": false,
+    "stripInternal": true,
     "skipLibCheck": true,
-    "baseUrl": ".",
+    "pretty": true,
+    "declaration": false,
+    "preserveSymlinks": false,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "strictNullChecks": false,
+    "noImplicitAny": false,
+    "jsx": "preserve",
+    "useDefineForClassFields": false,
+    "strictPropertyInitialization": false,
+    "disableSizeLimit": true,
+    "rootDir": "./",
+    "baseUrl": "./",
+    "lib": ["es2018", "dom"],
+    "types": ["vite/client", "vitest/globals"],
     "paths": {
       "@/*": ["src/*"]
-    }
+    },
+    "outDir": "dist"
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "exclude": ["node_modules", "dist"]
 }
