--- a/apps/web-app/package.json
+++ b/apps/web-app/package.json
@@ -19,6 +19,7 @@
     "sass": "^1.55.0",
     "typescript": "^4.6.4",
     "vite": "^3.0.0",
+    "vitest": "0.12.9",
     "vue-tsc": "^0.38.4"
   }
 }
