--- a/package.json
+++ b/package.json
@@ -21,6 +21,13 @@
     "pnpm": ">=7.5.1"
   },
   "dependencies": {
-    "dayjs": "^1.11.5"
+    "@nan/utils": "workspace:^1.0.0",
+    "axios": "^1.1.2",
+    "dayjs": "^1.11.5",
+    "md5": "^2.3.0"
+  },
+  "devDependencies": {
+    "@types/md5": "^2.3.2",
+    "@types/node": "14"
   }
 }
